# rust-actix-restapi

./: .Dockerignore  .env.example  .gitignore  Cargo.toml  README.MD  diesel.toml  docker-compose.yml
migrations/2023-07-07-032325_create_users/: up.sql
migrations/2023-07-07-033221_create_shops/: down.sql  up.sql
migrations/2023-11-22-092555_create_users/: up.sql
migrations/2023-11-22-092834_create_shops/: up.sql
src/: main.rs
src/config/: config.rs
src/controllers/: user_controller.rs
src/database/: database.rs
src/docs/: apis_doc.rs  mod.rs
src/models/: mod.rs  shop.rs  user.rs
src/pkg/config/: config.rs
src/routes/: mod.rs  routes.rs  user.rs  user_route.rs
src/schema/: schema.rs
src/schemas/: schema.rs
src/services/: user_services.rs
src/utils/: response.rs
