[package]
name = "rust-hexagonal-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2.8.0"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "macro", "chrono"] }
deadpool-diesel = "0.4.1"
dotenvy = "0.15"
once_cell = "1.18.0"
chrono = "0.4.26"

[dev-dependencies]
assert_matches = "1.1"
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
lazy_static = "1.0"