[package]
name = "rust-hexagonal-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2.8.0"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
deadpool-diesel = "0.4.1"
dotenvy = "0.15"
once_cell = "1.18.0"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"