[package]
name = "rust-hexagonal-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono"] }
derive_more ={ version = "0.99.17", features = ["from", "add", "iterator"] }
deadpool-diesel = "0.5.0"
dotenvy = "0.15.7"
once_cell = "1.18.0"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
utoipa = { version = "4.1", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }

